--- a/gameFiles/settings.json
+++ b/gameFiles/settings.json
@@ -1,1 +1,1 @@
-{"input": "0", "keyboard1": "z", "keyboard2": "x", "keyboard3": "c", "keyboard4": "v", "keyboardOver": "space", "gamepad1": "x", "gamepad2": "a", "gamepad3": "y", "gamepad4": "b", "gamepadOver": "down"}
+{"input": "1", "keyboard1": "z", "keyboard2": "x", "keyboard3": "c", "keyboard4": "v", "keyboardOver": "space", "gamepad1": "A", "gamepad2": "B", "gamepad3": "y", "gamepad4": "b", "gamepadOver": "DOWN"}
