--- a/gameFiles/settings.json
+++ b/gameFiles/settings.json
@@ -1,1 +1,1 @@
-{"input": "0", "keyboard1": "z", "keyboard2": "x", "keyboard3": "c", "keyboard4": "v", "keyboardOver": "space", "gamepad1": "X", "gamepad2": "A", "gamepad3": "Y", "gamepad4": "B", "gamepadOver": "DOWN"}
+{"input": "0", "keyboard1": "z", "keyboard2": "x", "keyboard3": "c", "keyboard4": "v", "keyboardOver": "space", "gamepad1": "LT", "gamepad2": "LB", "gamepad3": "RB", "gamepad4": "RT", "gamepadOver": "A"}
