--- a/gameFiles/settings.json
+++ b/gameFiles/settings.json
@@ -1,1 +1,1 @@
-{"input": "1", "keyboard1": "z", "keyboard2": "x", "keyboard3": "c", "keyboard4": "v", "keyboardOver": "space", "gamepad1": "LEFT", "gamepad2": "RIGHT", "gamepad3": "X", "gamepad4": "A", "gamepadOver": "B"}
+{"input": "0", "keyboard1": "z", "keyboard2": "x", "keyboard3": "c", "keyboard4": "v", "keyboardOver": "space", "gamepad1": "LT", "gamepad2": "LB", "gamepad3": "RB", "gamepad4": "RT", "gamepadOver": "A", "cheats": 0}
